# tailscale-media-gallery

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tailscale_media_gallery/: __init__.py  app.py
src/tailscale_media_gallery/templates/: gallery.html  md_view.html
